# RPA_Vercel

./: .env.example  .gitignore  AI_DETECTION_BYPASS_GUIDE.md  COMPREHENSIVE_ACTION_PLAN.md  COMPREHENSIVE_ANALYSIS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEVELOPMENT_PLAN.md  DOCUMENTATION.md  Dockerfile  ENHANCEMENT_PLAN_v2.4.md  ENHANCEMENT_SUMMARY.md  MEMORY.md  NEXT_STEPS.md  ORGANIZATION_SUMMARY.md  PRODUCTION_ENHANCEMENT_PLAN.md  PRODUCT_STATUS_REPORT.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  diagnose.py  docker-compose.yml  loguru.py  package-lock.json  pyproject.toml  railway.json  requirements-dev.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  run_backend.py  run_tests.bat  run_tests.ps1  setup.ps1  setup_minimal.bat  setup_minimal.sh  start_backend.ps1  start_backend_detached.bat  start_backend_real.ps1  start_server.py  start_servers.ps1  (+2 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
api/: index.py
config/: agent_io_contracts.json  agents_config.yaml  mcp_config.yaml
docs/: ACADEMIC_API_SETUP.md  APPLICATION_STATE.md  DOCUMENTATION_INDEX.md  GOOGLE_OAUTH_SETUP.md  LOCAL_RUN_VERIFICATION.md  LOCAL_TESTING_GUIDE.md  SESSION_SUMMARY.md  STATUS_DASHBOARD.md  TESTING_REPORT.md  architecture.md  old_AGENT_PROGRESS.md  old_DEVELOPMENT_SESSION.md  old_EXECUTIVE_SUMMARY.md  old_INSTALLATION.md  old_LOCAL_RUN_GUIDE.md  old_LOCAL_VALIDATION_COMPLETE.md  old_MASTER_PROJECT_STATUS.md  old_PHASE2_PROGRESS.md  old_PROGRESS_TRACKER.md  old_PROJECT_COMPLETE_REVIEW.md  old_PROJECT_STATUS.md  old_PROJECT_STATUS_CURRENT.md  (+6 more)
(+158 files in other folders)
