[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-proposal-agent"
version = "2.4.0"
description = "AI-Powered Multi-Agent Research Proposal Generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
